# blink1-tool

./: .cirrus.yml  .gitignore  .gitmodules  51-blink1.rules  CMakeLists.txt  Dockerfile-ubuntu  GNUmakefile  LICENSE.txt  Makefile  README-MakingReleases.md  README-Windows-building.md  README.md  blink1-lib-lowlevel-hidapi.h  blink1-lib-lowlevel-hiddata.h  blink1-lib-patterns.h  blink1-lib.c  blink1-lib.h  blink1-tool.c  devd-51-blink1.conf
.github/workflows/: linux.yml  macos.yml  macosx.yml  main.yml  raspberrypi.yml  windows.yml
blink1control-tool/: GNUmakefile  Makefile  blink1control-tool.c
blink1raw/: Makefile
docs/: README-MakingReleases.md  README-Windows-building.md
hidapi/libusb/: hid.c
html/blink1-demo-colorpicker/: index.html  script.js
html/blink1-demo-party/: index.html  script.js
patches/: freebsd-hidapi-libusb-hid.c.patch
scripts/: blink1-moodlight.sh  blink1-pattern-fill-halloween.sh  blink1-pattern-fill-off.sh  blink1-pattern-fill-too.sh  blink1-pattern-fill-white.sh  blink1-pattern-fill.sh  blink1-pattern-read.sh  blink1-rainbow.sh
server/: Dictionary.c  Dictionary.h  README.md  blink1-tiny-server.c  patterns-example.json  test_blink1_tiny_server.py  wincompat.h
server/html/: index.html
server/html/blink1-demo-colorpicker/: index.html  script.js
server/html/blink1-demo-party/: index.html  script.js
server/html/blink1-demo-simplest/: index.html
server/html/css/: style-slate.css
tests/: test-blink1-lib.c  test_blink1_tiny_server.py
